syntax = "proto3";

package pb.user.v1;

import "pb/user/v1/user.proto";

option go_package = "__user/gen/user/v1;userpb";

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
}

// Profile messages
message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  User user = 1;
}

// Auth messages
message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message RegisterRequest {
  string name = 1;
  string email = 2;
  string message = 3;
}

message RegisterResponse {
  string token = 1;
}
